<resources>
    <string name="app_name">CellIn</string>
    <string name="disclaimer_text">
        This application was created by the PSCR lab and intended
        for internal lab use only.\n\nThis is a beta release, with all warnings implied.
    </string>
    <string name="signal_excellent">Excellent</string>
    <string name="signal_good">Good</string>
    <string name="signal_fair">Fair</string>
    <string name="signal_poor">Poor</string>
    <string name="grade_label_top">Excellent</string>
    <string name="grade_label_mid">Good</string>
    <string name="grade_label_low">Poor</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Set Location Permission</string>
    <string name="ok">OK</string>
    <string name="login_app">Login App : Masukkan ID. User dan Password</string>
    <string name="btn_login">Log In</string>
    <string name="btn_register">Register</string>
    <string name="btn_simpan">Simpan</string>


    <string-array name="list_file">
        <item>2G</item>
        <item>3G</item>
        <item>4G</item>
    </string-array>


    <!-- User -->
    <string name="id_user">ID. User</string>
    <string name="nama_user">Nama User</string>
    <string name="level_user">Email</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>

    <string name="registrasi_user">Registrasi User Baru</string>

    <!-- Meja -->
    <string name="no_meja">No. Meja</string>
    <string name="bentuk">Bentuk</string>

    <!-- Menu -->
    <string name="txt_kd_menu">KD. Menu</string>
    <string name="txt_nama_menu">Nama Menu</string>
    <string name="txt_deskripsi">Deskripsi</string>
    <string name="txt_harga">Harga</string>


    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>

    <string name="permission_camera_rationale">Location permission is needed to get cell location.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permision_available_location">Location Permission has been granted. Cell location could be set.
    </string>
</resources>
